# rust_disk_compare

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: build_and_test.yml  clippy.yml
src/: cli.rs  errors.rs  hasher.rs  lib.rs  main.rs
test_files/: hashes.txt
test_files/dir2/: file4.txt
test_files/dir3/: file2.txt  file3.txt
