[package]
name = "disk_compare"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "Tool for computing hashes and comparing files"
keywords = ["compare", "hash", "checksum", "tool", "parallel"]
categories = ["command-line-utilities"]
repository = "https://www.github.com/marsfan/rust_disk_compare"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
indicatif = { version = "0.17.7", features = ["rayon"] }
md-5 = "0.10.6"
rayon = "1.8.1"
sha2 = "0.10.8"
thiserror = "1.0.57"
walkdir = "2.4.0"

[lints.rust]
missing_docs = "warn"
deprecated-in-future = "warn"

[lints.clippy]
all = "warn"
correctness = "warn"
suspicious = "warn"
complexity = "warn"
perf = "warn"
pedantic = "warn"
cargo = "warn"

# Individual rules instead of groups
missing_docs_in_private_items = "warn"
cargo_common_metadata = "warn"
unwrap_in_result = "warn"
match_bool = "warn"
uninlined_format_args = "warn"
needless_pass_by_value = "warn"
explicit_iter_loop = "warn"

# Allow multiple crate versions issue
# caused by dependencies
multiple_crate_versions = { level = "allow", priority = 1 }

